# raytracer.rs

./: Cargo.toml
src/: color.rs  config.rs  image.rs  lib.rs  main.rs  matrix.rs  output.rs  point.rs  ray.rs  raylauncher.rs  renderer.rs  utils.rs  vector.rs  world.rs
src/lib/: Hit.rs  camera.rs  mod.rs  point.rs  ray.rs  raylauncher.rs  renderer.rs  utils.rs  vector.rs  world.rs
src/lib/light/: mod.rs  spotlight.rs  vectorlight.rs
src/lib/object/: mod.rs  plane.rs  sphere.rs
src/light/: mod.rs  spotlight.rs  vectorlight.rs
src/object/: mod.rs  plane.rs  sphere.rs
tests/: matrix.rs  vector.rs
