[package]
name = "raytracer"
version = "0.1.0"
authors = ["Cyril Coutelier <cyril@flat.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "0.5.0"
rand = "0.8.3"
once_cell = "1.15.0"

[lib]
name = "raytracer"
path = "src/lib/mod.rs"
